--- a/package.json
+++ b/package.json
@@ -10,9 +10,11 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@ant-design/icons": "^5.6.1",
     "@reduxjs/toolkit": "^2.6.1",
     "antd": "^5.24.6",
     "axios": "^1.8.4",
+    "dayjs": "^1.11.13",
     "firebase": "^11.6.0",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
